--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+
+.nav_bar_wrapper a{
+  padding-left: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  align-content: right;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
