--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
 
 .nav_bar_wrapper a{
   padding-left: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  align-content: right;
 }
 
 @media (prefers-reduced-motion: no-preference) {
