--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 
 .nav_bar_wrapper a{
@@ -15,13 +15,19 @@
   align-content: right;
 }
 
+.btn-submit{
+  min-width: 100vw;
+  min-height: 100vh;
+  text-decoration: dotted;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -30,10 +36,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
-  color: #61dafb;
+  color: #fb6161;
 }
 
 @keyframes App-logo-spin {
